--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header">
         <h1>Today is Mushu's birthday 🎉</h1>
-        <img src="mushi.jpeg" id="mushu-img">
+        <img src="images/mushi.jpeg" id="mushu-img">
         <h2 id="bday-age">2 years old</h2>
         <h4 id="bday-date">11.06.2021</h4>
     </div>
